# muse_armcl

./: CMakeLists.txt  README.md  package.xml  plugins.xml
configs/: external_torque_observer.apex
experiments/20190122/: nn_u0_confusion_matrix.csv  nn_u20_confusion_matrix.csv  nn_u40_confusion_matrix.csv  nn_u60_confusion_matrix.csv
experiments/20190125/: wm_u0_confusion_matrix.csv  wm_u20_confusion_matrix.csv  wm_u40_confusion_matrix.csv  wm_u60_confusion_matrix.csv
experiments/20190204/: cp_00_1_confusion_matrix.csv  cp_00_1_process_progress.txt  cp_00_1_send_messages.txt  cp_00_send_messages.txt  cp_025_1_confusion_matrix.csv  cp_025_1_process_progress.txt  cp_025_1_send_messages.txt  cp_05_1_process_progress.txt  cp_05_1_send_messages.txt  cp_05_confusion_matrix.csv  cp_05_send_messages.txt  cp_075_1_send_messages.txt  cp_10_1_process_progress.txt  cp_10_1_send_messages.txt  cp_10_process_progress.txt  cp_10_send_messages.txt  cp_125_1_process_progress.txt  cp_15_confusion_matrix.csv  cp_15_process_progress.txt  cp_15_send_messages.txt  cp_20_send_messages.txt  cp_25_send_messages.txt  cp_30_send_messages.txt  cp_35_send_messages.txt  muse_armcl_cp_05_1.csv  muse_armcl_cp_20.csv  muse_armcl_cp_30.csv  muse_armcl_cp_35.csv  muse_armcl_su_00.csv  muse_armcl_su_025.csv
experiments/20190402/: cp_00_confusion_matrix.csv  cp_05_1_confusion_matrix.csv  cp_075_1_confusion_matrix.csv  cp_10_1_confusion_matrix.csv  cp_10_confusion_matrix.csv  cp_125_1_confusion_matrix.csv  cp_20_confusion_matrix.csv  cp_25_confusion_matrix.csv  cp_30_confusion_matrix.csv  cp_35_confusion_matrix.csv
include/muse_armcl/density/: cluster_data.hpp  cluster_distribution.hpp  cluster_dominant.hpp  cluster_weighted_distribution.hpp  contact_point_histogram.h  contact_point_histogram_min.h  indexation.hpp  sample_density.hpp
include/muse_armcl/evaluation/: confusion_matrix.hpp  contact_evaluation_data.hpp  contact_sample.hpp  data_set_loader.hpp  detection_result.hpp  ground_truth_particle_set_distance.hpp  msgs_conversion.hpp
include/muse_armcl/prediction/: prediction_integral.hpp  prediction_model.hpp
include/muse_armcl/resampling/: resampling.hpp
include/muse_armcl/samples/: sample_density.hpp
include/muse_armcl/sampling/: normal_sampling.hpp  uniform_sampling.hpp
include/muse_armcl/scheduling/: scheduler.hpp
include/muse_armcl/state_space/: confusion_matrix.hpp  detection_result.hpp  mesh_map.h  mesh_map.hpp  mesh_map_provider.hpp  state_publisher.h  state_publisher_offline.hpp  state_space_description.hpp  transform_graph.h
include/muse_armcl/update/: contact_localization_update_model.hpp  joint_state_data.hpp  joint_state_provider.h  update_model.hpp
launch/: muse_armcl.launch  muse_armcl_hist.launch  muse_armcl_nn.launch  muse_armcl_offline.launch  muse_armcl_offline_cp.launch  muse_armcl_offline_nn.launch  muse_armcl_offline_wm.launch  muse_armcl_play_data.launch
scripts/: evaluation_script.py  plot_conf_mat.py  process_conf_mat.py
src/density/: contact_point_histogram.cpp  contact_point_histogram_min.cpp  dominants.cpp  means.cpp  nearest_neighbor_density.cpp  sample_density_impl.hpp  weighted_means.cpp
src/node/: labeled_contact_points_change_frames.cpp  muse_armcl_bag_file_data_publisher.cpp  muse_armcl_node.cpp  muse_armcl_node.h  muse_armcl_offline_node.cpp  muse_armcl_offline_node.h  muse_armcl_test_bag_node.cpp  muse_armcl_test_tfg_node.cpp
src/prediction/: dummy_data_provider.cpp  random_walk.cpp
src/resampling/: kld.cpp  kld_random.cpp  residual.cpp  sir.cpp  stratified.cpp  systematic.cpp  wheel.cpp
src/sampling/: normal.cpp  uniform_all_links.cpp  uniform_all_maps.cpp  uniform_per_link.cpp
src/scheduling/: cfs.cpp  dummy.cpp  integrate_all.cpp  rate.cpp
src/state_space/: mesh_map.cpp  mesh_map_loader.cpp  mesh_map_loader_offline.cpp  state_publisher.cpp  state_publisher_offline.cpp  transform_graph.cpp
src/update/: dummy_update_model.cpp  joint_state_provider.cpp  normalized_cone_update_model.cpp  normalized_update_model.cpp
